Added devices/:id/snapshot
