# api/swagger.yaml
@@ -5,7 +5,7 @@ info:
     license:
         name: GPL-3.0
     title: domoja
-    version: 1.1.7
+    version: 1.2.0
 paths:
     /devices:
         get:
@@ -54,6 +54,22 @@ paths:
                     description: 'command sent to the device'
                     in: formData
                     name: command
+                    required: true
+                    type: string
+    '/devices/{id}/snapshot':
+        get:
+            operationId: DevicesServiceGetSnapshot
+            produces:
+                - text/html
+            responses:
+                '204':
+                    description: 'No content'
+            description: 'Get a snapshot from a camera device'
+            parameters:
+                -
+                    description: 'path of the device'
+                    in: path
+                    name: id
                     required: true
                     type: string
     /pages:
